# erisk-2025

./: .gitignore  README.md  model_symptom_agreement.csv  pyproject.toml  requirements.txt  setup.cfg  symptom_agreement_results.csv
depression_detector_analysis/: complete_detailed_analysis_all_people.json  complete_mental_health_analysis_all_people.txt  depression_detector_analysis.py  mental_health_report_charts.py
erisk/: spark.py
erisk/etl/embedding/: erisk_workflow-v2.py  erisk_workflow.py  preprocess_utils.py  workflow.py
erisk/t2-dummy-client/: README.md  dummy_client_process_all_rounds.py  get_discussions.py  submit_run_decisions.py
notebooks/: eda1.ipynb  task2_EDA.ipynb  xml_to_json.py
notebooks/dahumada3/: 00-Task2EDA.ipynb  02-PilotTaskResultsEDA.ipynb
notebooks/sid/: eda + feature_engineering.ipynb  mentalBERT-model.ipynb  statistical_test_output.txt  task2_EDA.ipynb
pilot_task/: README.md  agent_profile_analysis.py  agent_profiles.csv  extract_bdi_scores_v2.py  extract_bdi_summary_v2.py  extract_conversation_v2.py  extract_conversations_json_v2.py  extract_conversations_re.py  generate_submission.bat  interactions_to_md.py  persona_md_from_json.py  symptom_agreement_analysis.py  transcript-eda.ipynb  transcript_to_md.py  verify_conversation_submission.py
pilot_task/prompt/ensemble/: prompt.md
pilot_task/prompt/v2/: prompt.md  schema.json  schema_openAI.json
pilot_task/submission/: interactions_1.json  interactions_run1.json  interactions_run2.json  interactions_run3.json  interactions_run4.json  readme.md  results_1.json  results_run1.json  results_run2.json  results_run3.json  results_run4.json
scripts/utils/: slurm-venv.sh
tests/: conftest.py
user/dahumada3/: Readme.md
user/syang723/: automated_run.py
(+132 files in other folders)
