[project]
name = "erisk-2025"
version = "0.1.1"
authors = [{ name = "David Guecha", email = "dahumada3@gatech.edu" }]
description = "eRisk 2025 DS@GT Project"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/dsgt-kaggle-clef/erisk-2025"
Issues = "https://github.com/dsgt-kaggle-clef/erisk-2025/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
where = ["."]
include = ["erisk*"]
namespaces = false
